--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>Travel</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -12,8 +18,10 @@
     />
   </head>
   <body>
-    <include src="./partials/example.html"></include>
+    <div class="wrapper">
+      <include src="./partials/Main/main.html"></include>
 
-    <script src="./index.js"></script>
+      <script src="./index.js"></script>
+    </div>
   </body>
 </html>
