done sections main, popilarExcursions, aboutUs, typeOfExcursions, smallGallery

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,14 @@
   <body>
     <div class="wrapper">
       <include src="./partials/Main/main.html"></include>
+      <include src="./partials/Main/popularExcursions.html"></include>
+      <include src="./partials/Main/aboutUs.html"></include>
+      <include src="./partials/Main/typeOfExcursions.html"></include>
+      <include src="./partials/Main/smallGallery.html"></include>
+      <include src="./partials/Main/reviews.html"></include>
 
       <script src="./index.js"></script>
+      <script src="./mainSlider.js"></script>
     </div>
   </body>
 </html>
