--- a/src/index.html
+++ b/src/index.html
@@ -19,12 +19,18 @@
   </head>
   <body>
     <div class="wrapper">
-      <include src="./partials/Main/main.html"></include>
-      <include src="./partials/Main/popularExcursions.html"></include>
-      <include src="./partials/Main/aboutUs.html"></include>
-      <include src="./partials/Main/typeOfExcursions.html"></include>
-      <include src="./partials/Main/smallGallery.html"></include>
-      <include src="./partials/Main/reviews.html"></include>
+      <main>
+        <include src="./partials/Main/main.html"></include>
+        <include src="./partials/Main/popularExcursions.html"></include>
+        <include src="./partials/Main/aboutUs.html"></include>
+        <include src="./partials/Main/typeOfExcursions.html"></include>
+        <include src="./partials/Main/smallGallery.html"></include>
+        <include src="./partials/Main/reviews.html"></include>
+        <include src="./partials/Main/form.html"></include>
+      </main>
+      <footer>
+        <include src="./partials/footer.html"></include>
+      </footer>
 
       <script src="./index.js"></script>
       <script src="./mainSlider.js"></script>
