make menu_burger

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
 
       <script src="./index.js"></script>
       <script src="./mainSlider.js"></script>
+      <script src="./form.js"></script>
     </div>
   </body>
 </html>
