done adapt excursions

--- a/src/excursions.html
+++ b/src/excursions.html
@@ -23,10 +23,13 @@
       <main>
         <include src="./partials/Excursions/excursions.html"></include>
         <include src="./partials/Excursions/searchTrip.html"></include>
+        <!-- <include src="./partials/Excursions/filter.html"></include> -->
+        <!-- <include src="./partials/Excursions/div.html"></include> -->
       </main>
       <footer>
         <include src="./partials/footer.html"></include>
       </footer>
     </div>
+    <script src="./menuBurger.js"></script>
   </body>
 </html>
