--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
 
       <!-- <script src="./index.js"></script> -->
       <script src="./mainSlider.js"></script>
+      <script src="./menuBurger.js"></script>
       <script src="./form.js"></script>
     </div>
   </body>
