created with styles one card of ourTrip

--- a/src/excursions.html
+++ b/src/excursions.html
@@ -18,12 +18,12 @@
     />
     <link rel="stylesheet" href="./sass/main.scss" />
   </head>
-  <body>
+  <body style="background-color: #fbfbfb">
     <div class="wrapper">
       <main>
         <include src="./partials/Excursions/excursions.html"></include>
         <include src="./partials/Excursions/searchTrip.html"></include>
-        <!-- <include src="./partials/Excursions/filter.html"></include> -->
+        <div class="container"><include src="./partials/Excursions/ourTrip.html"></include></div>
         <!-- <include src="./partials/Excursions/div.html"></include> -->
       </main>
       <footer>
