done filter on divs with wrong inputs

--- a/src/excursions.html
+++ b/src/excursions.html
@@ -23,7 +23,10 @@
       <main>
         <include src="./partials/Excursions/excursions.html"></include>
         <include src="./partials/Excursions/searchTrip.html"></include>
-        <div class="container"><include src="./partials/Excursions/ourTrip.html"></include></div>
+        <div class="container right">
+          <include src="./partials/Excursions/filter.html"></include>
+          <include src="./partials/Excursions/ourTrip.html"></include>
+        </div>
         <!-- <include src="./partials/Excursions/div.html"></include> -->
       </main>
       <footer>
