done full adapt sections filter and ourTrip

--- a/src/excursions.html
+++ b/src/excursions.html
@@ -23,7 +23,7 @@
       <main>
         <include src="./partials/Excursions/excursions.html"></include>
         <include src="./partials/Excursions/searchTrip.html"></include>
-        <div class="container right">
+        <div class="container wrapperFor_filterAndTrip">
           <include src="./partials/Excursions/filter.html"></include>
           <include src="./partials/Excursions/ourTrip.html"></include>
         </div>
