done descriptionWay with adapt

--- a/src/page1.html
+++ b/src/page1.html
@@ -23,13 +23,15 @@
     <div class="wrapper">
       <main>
         <include src="./partials/pagesExcursions/page1Header.html"></include>
-        <include src="./partials/pagesExcursions/page1Description.html"></include>
+        <include src="./partials/pagesExcursions/page1DescriptionExcursion.html"></include>
         <include src="./partials/pagesExcursions/page1Calendar.html"></include>
+        <include src="./partials/pagesExcursions/page1DescriptionWay.html"></include>
       </main>
       <footer>
         <include src="./partials/footer.html"></include>
       </footer>
     </div>
     <script src="./menuBurger.js"></script>
+    <script src="./mainSlider.js"></script>
   </body>
 </html>
