change z-index on yellow circle

--- a/src/page1.html
+++ b/src/page1.html
@@ -32,6 +32,6 @@
       </footer>
     </div>
     <script src="./menuBurger.js"></script>
-    <script src="./mainSlider.js"></script>
+    <script src="./sliderDescriptionWay.js"></script>
   </body>
 </html>
