change z-index on wrapper_price

--- a/src/page1.html
+++ b/src/page1.html
@@ -26,6 +26,7 @@
         <include src="./partials/pagesExcursions/page1DescriptionExcursion.html"></include>
         <include src="./partials/pagesExcursions/page1Calendar.html"></include>
         <include src="./partials/pagesExcursions/page1DescriptionWay.html"></include>
+        <include src="./partials/pagesExcursions/add-costs.html"></include>
       </main>
       <footer>
         <include src="./partials/footer.html"></include>
